# yapplotlib

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  RELEASING.md  index.html  mkdocs.yml  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml  publish-test.yml  publish.yml
chatplotlib/: __init__.py  _api.py  _artists.py  _styles.py  _text.py
docs/: index.md  usage.md
search/: search_index.json
tests/: conftest.py  test_api.py  test_import.py  test_openai_messages.py  test_styles.py  test_text.py
usage/: index.html
yapplotlib/: __init__.py  _api.py  _artists.py  _messages.py  _styles.py  _text.py
yapplotlib/styles/: yapplotlib.dark.mplstyle  yapplotlib.paper.mplstyle
