[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "yapplotlib"
version = "0.1.0-alpha"
description = "A matplotlib plugin for rendering chat interfaces — ideal for academic AI papers."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Jacob Green"},
]
keywords = ["matplotlib", "chat", "visualization", "ai", "paper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5",
]

[project.urls]
Repository = "https://github.com/jjacobgreen/yapplotlib"
Issues = "https://github.com/jjacobgreen/yapplotlib/issues"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["yapplotlib"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
exclude = ["smoke_test\\.py"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.8",
]
